[package]
name = "po-llm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-openai = { version = "0.32.4", features = ["byot", "chat-completion"] }
async-trait = "0.1.89"
clap = { version = "4.5.55", features = ["derive"] }
futures = "0.3.31"
glob = "0.3.3"
indicatif = "0.18.3"
polib = "0.3.0"
schemars = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
toml = "0.9.11"
