[package]
name = "po-llm"
version = "0.2.1"
edition = "2024"
license = "MIT"
description = "Translate PO files using LLM"
readme = "README.md"
repository = "https://github.com/Abab-bk/po-llm"
keywords = ["ai", "gettext", "translate", "llm"]
categories = ["text-processing", "localization", "command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
async-openai = { version = "0.32.4", features = ["byot", "chat-completion"] }
async-trait = "0.1.89"
clap = { version = "4.5.55", features = ["derive"] }
futures = "0.3.31"
glob = "0.3.3"
indicatif = "0.18.3"
polib = "0.3.0"
schemars = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
toml = "0.9.11"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
